feat(java): improve Java 21 idiomatics (#358)
* feat(java): improve Java 21 idiomatics

- Replace .collect(Collectors.toList()) with .toList() (Java 16+)
- Use pattern matching for instanceof in LampEntity.equals() (Java 16+)
- Add LampNotFoundException for explicit 404 handling via @ControllerAdvice
- Change LampService.findById() to return Optional<Lamp>
- Change LampService.update()/delete() to throw LampNotFoundException
- Remove @SuppressWarnings("unchecked") and unsafe double-cast patterns
- Remove try/catch blocks from controller (GlobalExceptionHandler handles them)

Closes #352

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix(java): use Runnable::run executor for synchronous CompletableFuture

Pass Runnable::run as the executor to CompletableFuture.supplyAsync()
to keep request processing on the container thread pool, matching the
generated LampsApi defaults. This preserves request-scoped context
(MDC, security) and avoids uncontrolled concurrency via ForkJoinPool.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix(java): add serialVersionUID to LampNotFoundException

Add @Serial serialVersionUID to satisfy PMD MissingSerialVersionUID
rule, since the class extends RuntimeException (Serializable).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* chore(java): update JaCoCo coverage report

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>